--- a/src/H.LowCode.Designer.WasmHost/wwwroot/index.html
+++ b/src/H.LowCode.Designer.WasmHost/wwwroot/index.html
@@ -13,6 +13,7 @@
     <link href="_content/AntDesign.ProLayout/css/ant-design-pro-layout-blazor.css" rel="stylesheet" />
 
     <link href="H.LowCode.Designer.WasmHost.styles.css" rel="stylesheet" />
+    <link href="_content/H.LowCode.DesignerEngine/designerengine.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="logo.png" />
 </head>
@@ -20,11 +21,11 @@
 <body>
     <div id="app">Loading...</div>
 
-    <div id="blazor-error-ui">
+    <!--<div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
-    </div>
+    </div>-->
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
