--- a/src/H.LowCode.Designer.WasmHost/wwwroot/index.html
+++ b/src/H.LowCode.Designer.WasmHost/wwwroot/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app" class="designpage">Loading...</div>
 
     <!--<div id="blazor-error-ui">
         An unhandled error has occurred.
