--- a/src/H.LowCode.WorkflowDesigner.WasmHost/wwwroot/index.html
+++ b/src/H.LowCode.WorkflowDesigner.WasmHost/wwwroot/index.html
@@ -11,6 +11,8 @@
     <link href="_content/H.LowCode.WorkflowDesigner/css/dialog.css" rel="stylesheet" />
     <link href="_content/H.LowCode.WorkflowDesigner/css/override-element-ui.css" rel="stylesheet" />
     <link href="_content/H.LowCode.WorkflowDesigner/css/workflow.css" rel="stylesheet" />
+    <link href="_content/H.LowCode.WorkflowDesigner/css/app.css" rel="stylesheet" />
+    <link href="_content/H.LowCode.WorkflowDesigner/css/chunk-vendors.dd03f60f.css" rel="stylesheet" />
 
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="logo.png" />
